* Removed redundant code, fixed path checking, removed print statements * Closes #7 * Note: occasionally has issues with confirming correct path in factorized form - need to fix