@@ -16,8 +16,6 @@ public class Maze {
 
     public boolean isWall(int x, int y) {
         boolean isWall = !maze.get(y).get(x);
-        System.out.println("output from maze isWall method: " + isWall);
-        System.out.println("coordinates for next x: " + x + " y: " + y);
         return isWall;
     }
 
@@ -36,7 +34,6 @@ public class Maze {
                 if (nonEmptyLineLength != -1) {
                     for (int i = 0; i < nonEmptyLineLength; i++) {
                         mazeLine.add(true);
-                        System.out.print("TRUE  ");
                     }
                 }
             } else {
@@ -44,14 +41,11 @@ public class Maze {
                 for (int idx = 0; idx < line.length(); idx++) {
                     if (line.charAt(idx) == '#') {
                         mazeLine.add(false);
-                        System.out.print("FALSE ");
                     } else if (line.charAt(idx) == ' ') {
                         mazeLine.add(true);
-                        System.out.print("TRUE  ");
                     }
                 }
             }
-            System.out.println();
             maze.add(mazeLine);
         }
 
@@ -63,13 +57,11 @@ public class Maze {
             if (maze.get(i).getFirst()) {
                 defaultDirection = DirectionOrientation.Direction.EAST;
                 startPosition = new MapPosition(0,i, defaultDirection);
-                System.out.println("Start " +  startPosition);
                 return startPosition;
             }
             if (maze.get(i).getLast()){
                 defaultDirection = DirectionOrientation.Direction.WEST;
                 startPosition = new MapPosition(maze.get(i).size() -1,i, defaultDirection);
-                System.out.println("Start " +  startPosition);
                 return startPosition;
             }
         }
@@ -77,22 +69,15 @@ public class Maze {
 
     }
 
-    public static void setStartPosition(MapPosition startPosition) {
-        Maze.startPosition = startPosition;
-    }
-
     // Find the exit point for the maze
     public static MapPosition getEndPosition() throws Exception{
-        boolean foundEnd = false;
         for (int j = 0; j<maze.size(); j++ ){
             if(maze.get(j).getFirst() && !(startPosition.x() == 0 && startPosition.y() == j)) {
                 endPosition = new MapPosition(0, j, defaultDirection);
-                System.out.println("End " +  endPosition);
                 return endPosition;
             }
-  ;          if (maze.get(j).get(maze.get(j).size() - 1) && !(startPosition.x() == maze.get(j).size() - 1 && startPosition.y() == j)) {
+            if (maze.get(j).getLast() && !(startPosition.x() == maze.get(j).size() - 1 && startPosition.y() == j)) {
                 endPosition = new MapPosition(maze.get(j).size() - 1, j, defaultDirection);
-                System.out.println("End " +  endPosition);
                 return endPosition;
             }
         }
@@ -104,7 +89,7 @@ public class Maze {
         for (List<Boolean> row : maze) {
             if (row.stream().allMatch(Boolean.TRUE::equals)) {
                 StringBuilder pathForwards = new StringBuilder();
-                for (int i = 0; i < row.size(); i++) {
+                for (int i = 0; i < row.size()-1; i++) {
                     pathForwards.append("F");
                 }
                 return pathForwards.toString();
@@ -119,9 +104,5 @@ public class Maze {
         String pathOut = checkEmptyRow();
          return !Objects.equals(pathOut, "");
      }
-
-    public static void setEndPosition(MapPosition endPosition) {
-        Maze.endPosition = endPosition;
-    }
 
 }
